# rust-actix-rest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
example/: client.sh
src/: config.rs  image_processing.rs  json.rs  main.rs  multipart.rs  types.rs
tests/: actix_crash.sh
