[package]
name = "actix_003"
version = "0.1.0"
authors = ["garet"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
opt-level = 0


[dependencies]
actix-web = "^1.0"
actix-form-data = "^0.4"
futures = "^0.1"
actix-multipart = "^0.1"
mime = "^0.3"
failure = "^0.1"
serde = "^1.0"
serde_json = "^1.0"
actix-http = "^0.2"
